--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,9 @@ publish = false # TODO: Remove when ready to publish
 [dependencies]
 anyhow = "1.0"
 aws-sdk-dynamodb = "1.23.0"
-aws-sdk-elasticache = "1.23.0"
-aws-sdk-s3 = "1.24.0"
 axum = "0.7.5"
 chrono = { version = "0.4.19", features = ["serde"] }
+derive-new = "0.6.0"
 log = "0.4"
 pico-args = "0.5.0"
 pretty_env_logger = "0.5"
