--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ axum = "0.7.5"
 chrono = { version = "0.4.19", features = ["serde"] }
 derive-new = "0.6.0"
 log = "0.4"
+nakago = "0.19"
+nakago-axum = "0.19"
+nakago-sea-orm = "0.19"
 pico-args = "0.5.0"
 pretty_env_logger = "0.5"
 sea-orm = { version = "0.12", features = [
