--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ derive-new = "0.6.0"
 log = "0.4"
 nakago = "0.19"
 nakago-axum = "0.19"
+nakago-derive = "0.19"
 nakago-sea-orm = "0.19"
 pico-args = "0.5.0"
 pretty_env_logger = "0.5"
